--- a/res/layout/activity_first.xml
+++ b/res/layout/activity_first.xml
@@ -15,11 +15,12 @@
 	    android:onClick="fetchData"/>
 	
 	<TextView android:id="@+id/fetchResult"
-	    android:layout_width="match_parent"
-	    android:layout_height="match_parent"/>
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"/>
 	
-	
-	
-	
+	<ListView android:id="@+id/ListView01" 
+	    android:layout_width="wrap_content" 
+	    android:layout_height="wrap_content">
+	</ListView>
 	
 </RelativeLayout>
