--- a/res/layout/activity_first.xml
+++ b/res/layout/activity_first.xml
@@ -23,4 +23,11 @@
 	    android:layout_height="wrap_content">
 	</ListView>
 	
+	<LinearLayout android:id="@+id/ListViewWrapper"
+	    android:orientation="vertical"
+	    android:background="#FFFFFF"
+	    android:layout_width="fill_parent"
+	    android:layout_height="fill_parent">
+	</LinearLayout>
+	
 </RelativeLayout>
